; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_ctl.c_ip_vs_zero_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_ctl.c_ip_vs_zero_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_stats = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_vs_stats*)* @ip_vs_zero_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip_vs_zero_stats(%struct.ip_vs_stats* %0) #0 {
  %2 = alloca %struct.ip_vs_stats*, align 8
  store %struct.ip_vs_stats* %0, %struct.ip_vs_stats** %2, align 8
  %3 = load %struct.ip_vs_stats*, %struct.ip_vs_stats** %2, align 8
  %4 = getelementptr inbounds %struct.ip_vs_stats, %struct.ip_vs_stats* %3, i32 0, i32 0
  %5 = call i32 @spin_lock_bh(i32* %4)
  %6 = load %struct.ip_vs_stats*, %struct.ip_vs_stats** %2, align 8
  %7 = getelementptr inbounds %struct.ip_vs_stats, %struct.ip_vs_stats* %6, i32 0, i32 1
  %8 = call i32 @memset(i32* %7, i32 0, i32 4)
  %9 = load %struct.ip_vs_stats*, %struct.ip_vs_stats** %2, align 8
  %10 = call i32 @ip_vs_zero_estimator(%struct.ip_vs_stats* %9)
  %11 = load %struct.ip_vs_stats*, %struct.ip_vs_stats** %2, align 8
  %12 = getelementptr inbounds %struct.ip_vs_stats, %struct.ip_vs_stats* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock_bh(i32* %12)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @ip_vs_zero_estimator(%struct.ip_vs_stats*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
